--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="Dikira Kira Saja" />
+    <meta property="og:title" content="Holotaku-Community" />
     <meta
       property="og:image"
-      content="https://f.balxzzy.xyz/component/IMG-20240928-WA0193.jpg"
+      content="https://files.catbox.moe/vreqck.jpg"
     />
     <meta
       property="og:description"
-      content="WhatsApp bot community, WhatsApp bot dev, Community WhatsApp bot, WhatsApp bot drv, wabot"
+      content="Holotaku-Community, Holotaku-Komunitas, Komunitas, Community"
     />
     <meta
       name="twitter:image:src"
-      content="https://f.balxzzy.xyz/component/IMG-20240928-WA0193.jpg"
+      content="https://files.catbox.moe/vreqck.jpg"
     />
     <title>Community</title>
     <link
